buildscript/python/antlr/SquirrelParser.py
# Generated from SquirrelParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SquirrelParser ( Parser ):

    grammarFileName = "SquirrelParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'::'", "'...'", "'<-'", "'++'", "'--'", 
                     "'<'", "'<='", "'=='", "'!='", "'>'", "'>='", "'+='", 
                     "'-='", "'/='", "'*='", "'%='", "'='", "'%'", "'*'", 
                     "'/'", "'!'", "'&&'", "'||'", "'~'", "'^'", "'&'", 
                     "'|'", "'<=>'", "'<<'", "'>>'", "'>>>'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "';'", "':'", "','", "'@'", 
                     "'?'", "'.'", "'+'", "'-'", "'\"'", "'''", "'while'", 
                     "'do'", "'if'", "'else'", "'break'", "'continue'", 
                     "'return'", "'null'", "'function'", "'local'", "'for'", 
                     "'foreach'", "'in'", "'typeof'", "'base'", "'delete'", 
                     "'try'", "'catch'", "'throw'", "'clone'", "'yield'", 
                     "'resume'", "'switch'", "'case'", "'default'", "'this'", 
                     "'class'", "'extends'", "'constructor'", "'instanceof'", 
                     "'static'", "'enum'", "'const'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\n'" ]

    symbolicNames = [ "<INVALID>", "SCOPE", "VARARGS", "NEWSLOT", "INCREMENT", 
                      "DECREMENT", "LESS_THAN", "LESS_OR_EQUAL", "EQUAL", 
                      "NOT_EQUAL", "GREATER_THAN", "GREATER_OR_EQUAL", "ASSIGN_ADD", 
                      "ASSIGN_SUB", "ASSIGN_DIV", "ASSIGN_MUL", "ASSIGN_MOD", 
                      "ASSIGN", "MODULO", "MULTIPLY", "DIVIDE", "LOGICAL_NOT", 
                      "LOGICAL_AND", "LOGICAL_OR", "BITWISE_NOT", "BITWISE_XOR", 
                      "BITWISE_AND", "BITWISE_OR", "COMPARE", "LEFT_SHIFT", 
                      "RIGHT_SHIFT", "RIGHT_UNSIGNED_SHIFT", "L_PAREN", 
                      "R_PAREN", "L_CURLY_BRACKET", "R_CURLY_BRACKET", "L_BRACKET", 
                      "R_BRACKET", "SEMICOLON", "COLON", "COMMA", "AT", 
                      "QUESTION", "DOT", "PLUS", "MINUS", "DOUBLE_QUOTE", 
                      "SINGLE_QUOTE", "WHILE", "DO", "IF", "ELSE", "BREAK", 
                      "CONTINUE", "RETURN", "NULL", "FUNCTION", "LOCAL", 
                      "FOR", "FOREACH", "IN", "TYPEOF", "BASE", "DELETE", 
                      "TRY", "CATCH", "THROW", "CLONE", "YIELD", "RESUME", 
                      "SWITCH", "CASE", "DEFAULT", "THIS", "CLASS", "EXTENDS", 
                      "CONSTRUCTOR", "INSTANCEOF", "STATIC", "ENUM", "CONST", 
                      "IntegerLiteral", "FloatLiteral", "StringLiteral", 
                      "Comment", "MultilineComment", "BooleanLiteral", "Identifier", 
                      "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_statements = 1
    RULE_statement = 2
    RULE_statementBody = 3
    RULE_statementBlock = 4
    RULE_ifStatement = 5
    RULE_whileStatement = 6
    RULE_doWhileStatement = 7
    RULE_switchStatement = 8
    RULE_switchCase = 9
    RULE_defaultCase = 10
    RULE_forStatement = 11
    RULE_foreachStatement = 12
    RULE_foreachVar = 13
    RULE_breakStatement = 14
    RULE_continueStatement = 15
    RULE_returnStatement = 16
    RULE_yieldStatement = 17
    RULE_localDeclare = 18
    RULE_classDeclare = 19
    RULE_className = 20
    RULE_tryCatch = 21
    RULE_throwStatement = 22
    RULE_constStatement = 23
    RULE_constValue = 24
    RULE_indexAssign = 25
    RULE_enumStatement = 26
    RULE_enumerations = 27
    RULE_memberDeclare = 28
    RULE_inits = 29
    RULE_init = 30
    RULE_args = 31
    RULE_arg = 32
    RULE_funcname = 33
    RULE_literal = 34
    RULE_expression = 35
    RULE_functionDeclareEnd = 36
    RULE_tableSlot = 37
    RULE_basicTableSlot = 38
    RULE_arrayTableSlot = 39
    RULE_jsonTableSlot = 40
    RULE_expressionList = 41

    ruleNames =  [ "program", "statements", "statement", "statementBody", 
                   "statementBlock", "ifStatement", "whileStatement", "doWhileStatement", 
                   "switchStatement", "switchCase", "defaultCase", "forStatement", 
                   "foreachStatement", "foreachVar", "breakStatement", "continueStatement", 
                   "returnStatement", "yieldStatement", "localDeclare", 
                   "classDeclare", "className", "tryCatch", "throwStatement", 
                   "constStatement", "constValue", "indexAssign", "enumStatement", 
                   "enumerations", "memberDeclare", "inits", "init", "args", 
                   "arg", "funcname", "literal", "expression", "functionDeclareEnd", 
                   "tableSlot", "basicTableSlot", "arrayTableSlot", "jsonTableSlot", 
                   "expressionList" ]

    EOF = Token.EOF
    SCOPE=1
    VARARGS=2
    NEWSLOT=3
    INCREMENT=4
    DECREMENT=5
    LESS_THAN=6
    LESS_OR_EQUAL=7
    EQUAL=8
    NOT_EQUAL=9
    GREATER_THAN=10
    GREATER_OR_EQUAL=11
    ASSIGN_ADD=12
    ASSIGN_SUB=13
    ASSIGN_DIV=14
    ASSIGN_MUL=15
    ASSIGN_MOD=16
    ASSIGN=17
    MODULO=18
    MULTIPLY=19
    DIVIDE=20
    LOGICAL_NOT=21
    LOGICAL_AND=22
    LOGICAL_OR=23
    BITWISE_NOT=24
    BITWISE_XOR=25
    BITWISE_AND=26
    BITWISE_OR=27
    COMPARE=28
    LEFT_SHIFT=29
    RIGHT_SHIFT=30
    RIGHT_UNSIGNED_SHIFT=31
    L_PAREN=32
    R_PAREN=33
    L_CURLY_BRACKET=34
    R_CURLY_BRACKET=35
    L_BRACKET=36
    R_BRACKET=37
    SEMICOLON=38
    COLON=39
    COMMA=40
    AT=41
    QUESTION=42
    DOT=43
    PLUS=44
    MINUS=45
    DOUBLE_QUOTE=46
    SINGLE_QUOTE=47
    WHILE=48
    DO=49
    IF=50
    ELSE=51
    BREAK=52
    CONTINUE=53
    RETURN=54
    NULL=55
    FUNCTION=56
    LOCAL=57
    FOR=58
    FOREACH=59
    IN=60
    TYPEOF=61
    BASE=62
    DELETE=63
    TRY=64
    CATCH=65
    THROW=66
    CLONE=67
    YIELD=68
    RESUME=69
    SWITCH=70
    CASE=71
    DEFAULT=72
    THIS=73
    CLASS=74
    EXTENDS=75
    CONSTRUCTOR=76
    INSTANCEOF=77
    STATIC=78
    ENUM=79
    CONST=80
    IntegerLiteral=81
    FloatLiteral=82
    StringLiteral=83
    Comment=84
    MultilineComment=85
    BooleanLiteral=86
    Identifier=87
    NEWLINE=88
    WS=89

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(SquirrelParser.StatementsContext,0)


        def EOF(self):
            return self.getToken(SquirrelParser.EOF, 0)

        def getRuleIndex(self):
            return SquirrelParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SquirrelParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.statements()
            self.state = 85
            self.match(SquirrelParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SquirrelParser.StatementContext)
            else:
                return self.getTypedRuleContext(SquirrelParser.StatementContext,i)


        def getRuleIndex(self):
            return SquirrelParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = SquirrelParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -1155417030910803918) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 13600381) != 0):
                self.state = 87
                self.statement()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementBody(self):
            return self.getTypedRuleContext(SquirrelParser.StatementBodyContext,0)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(SquirrelParser.SEMICOLON)
            else:
                return self.getToken(SquirrelParser.SEMICOLON, i)

        def getRuleIndex(self):
            return SquirrelParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SquirrelParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & -1155417305788710862) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 13600381) != 0):
                    self.state = 93
                    self.statementBody()


                self.state = 97 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 96
                        self.match(SquirrelParser.SEMICOLON)

                    else:
                        raise NoViableAltException(self)
                    self.state = 99 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.statementBody()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementBlock(self):
            return self.getTypedRuleContext(SquirrelParser.StatementBlockContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SquirrelParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(SquirrelParser.WhileStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(SquirrelParser.DoWhileStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(SquirrelParser.SwitchStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(SquirrelParser.ForStatementContext,0)


        def foreachStatement(self):
            return self.getTypedRuleContext(SquirrelParser.ForeachStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(SquirrelParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(SquirrelParser.ContinueStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(SquirrelParser.ReturnStatementContext,0)


        def yieldStatement(self):
            return self.getTypedRuleContext(SquirrelParser.YieldStatementContext,0)


        def classDeclare(self):
            return self.getTypedRuleContext(SquirrelParser.ClassDeclareContext,0)


        def tryCatch(self):
            return self.getTypedRuleContext(SquirrelParser.TryCatchContext,0)


        def throwStatement(self):
            return self.getTypedRuleContext(SquirrelParser.ThrowStatementContext,0)


        def constStatement(self):
            return self.getTypedRuleContext(SquirrelParser.ConstStatementContext,0)


        def enumStatement(self):
            return self.getTypedRuleContext(SquirrelParser.EnumStatementContext,0)


        def indexAssign(self):
            return self.getTypedRuleContext(SquirrelParser.IndexAssignContext,0)


        def localDeclare(self):
            return self.getTypedRuleContext(SquirrelParser.LocalDeclareContext,0)


        def expression(self):
            return self.getTypedRuleContext(SquirrelParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SquirrelParser.RULE_statementBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementBody" ):
                listener.enterStatementBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementBody" ):
                listener.exitStatementBody(self)




    def statementBody(self):

        localctx = SquirrelParser.StatementBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statementBody)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.statementBlock()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.whileStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.doWhileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.switchStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                self.forStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 110
                self.foreachStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 111
                self.breakStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 112
                self.continueStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 113
                self.returnStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 114
                self.yieldStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 115
                self.classDeclare()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 116
                self.tryCatch()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 117
                self.throwStatement()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 118
                self.constStatement()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 119
                self.enumStatement()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 120
                self.indexAssign()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 121
                self.localDeclare()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 122
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_CURLY_BRACKET(self):
            return self.getToken(SquirrelParser.L_CURLY_BRACKET, 0)

        def statements(self):
            return self.getTypedRuleContext(SquirrelParser.StatementsContext,0)


        def R_CURLY_BRACKET(self):
            return self.getToken(SquirrelParser.R_CURLY_BRACKET, 0)

        def getRuleIndex(self):
            return SquirrelParser.RULE_statementBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementBlock" ):
                listener.enterStatementBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementBlock" ):
                listener.exitStatementBlock(self)




    def statementBlock(self):

        localctx = SquirrelParser.StatementBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statementBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(SquirrelParser.L_CURLY_BRACKET)
            self.state = 126
            self.statements()
            self.state = 127
            self.match(SquirrelParser.R_CURLY_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SquirrelParser.IF, 0)

        def L_PAREN(self):
            return self.getToken(SquirrelParser.L_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SquirrelParser.ExpressionContext,0)


        def R_PAREN(self):
            return self.getToken(SquirrelParser.R_PAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SquirrelParser.StatementContext)
            else:
                return self.getTypedRuleContext(SquirrelParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(SquirrelParser.ELSE, 0)

        def getRuleIndex(self):
            return SquirrelParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = SquirrelParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(SquirrelParser.IF)
            self.state = 130
            self.match(SquirrelParser.L_PAREN)
            self.state = 131
            self.expression(0)
            self.state = 132
            self.match(SquirrelParser.R_PAREN)
            self.state = 133
            self.statement()
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 134
                self.match(SquirrelParser.ELSE)
                self.state = 135
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SquirrelParser.WHILE, 0)

        def L_PAREN(self):
            return self.getToken(SquirrelParser.L_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SquirrelParser.ExpressionContext,0)


        def R_PAREN(self):
            return self.getToken(SquirrelParser.R_PAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(SquirrelParser.StatementContext,0)


        def getRuleIndex(self):
            return SquirrelParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = SquirrelParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(SquirrelParser.WHILE)
            self.state = 139
            self.match(SquirrelParser.L_PAREN)
            self.state = 140
            self.expression(0)
            self.state = 141
            self.match(SquirrelParser.R_PAREN)
            self.state = 142
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(SquirrelParser.DO, 0)

        def statement(self):
            return self.getTypedRuleContext(SquirrelParser.StatementContext,0)


        def WHILE(self):
            return self.getToken(SquirrelParser.WHILE, 0)

        def L_PAREN(self):
            return self.getToken(SquirrelParser.L_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SquirrelParser.ExpressionContext,0)


        def R_PAREN(self):
            return self.getToken(SquirrelParser.R_PAREN, 0)

        def getRuleIndex(self):
            return SquirrelParser.RULE_doWhileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStatement" ):
                listener.enterDoWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStatement" ):
                listener.exitDoWhileStatement(self)




    def doWhileStatement(self):

        localctx = SquirrelParser.DoWhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_doWhileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(SquirrelParser.DO)
            self.state = 145
            self.statement()
            self.state = 146
            self.match(SquirrelParser.WHILE)
            self.state = 147
            self.match(SquirrelParser.L_PAREN)
            self.state = 148
            self.expression(0)
            self.state = 149
            self.match(SquirrelParser.R_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWITCH(self):
            return self.getToken(SquirrelParser.SWITCH, 0)

        def L_PAREN(self):
            return self.getToken(SquirrelParser.L_PAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SquirrelParser.ExpressionContext,0)


        def R_PAREN(self):
            return self.getToken(SquirrelParser.R_PAREN, 0)

        def L_CURLY_BRACKET(self):
            return self.getToken(SquirrelParser.L_CURLY_BRACKET, 0)

        def R_CURLY_BRACKET(self):
            return self.getToken(SquirrelParser.R_CURLY_BRACKET, 0)

        def switchCase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SquirrelParser.SwitchCaseContext)
            else:
                return self.getTypedRuleContext(SquirrelParser.SwitchCaseContext,i)


        def defaultCase(self):
            return self.getTypedRuleContext(SquirrelParser.DefaultCaseContext,0)


        def getRuleIndex(self):
            return SquirrelParser.RULE_switchStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchStatement" ):
                listener.enterSwitchStatement(self)
